--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hvyv.nnemo - 하얀네모 프로젝트</title>
+    <title>Hvyv_nnemo - 하얀네모 스튜디오</title>
     <link rel="stylesheet" href="./css/reset.css">
 </head>
 <body>
+    <header>
+        <div id="fix-head">
+            <div id="head-logo">Hvyv_nnemo</div>
+        </div>
+    </header>
+    <section></section>
+    <footer></footer>
 </body>
 </html>
