--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div id="fix-head">
-            <div id="head-logo">Hvyv_nnemo</div>
+            <div id="head-logo">Hvyv<br>nnemo</div>
         </div>
     </header>
     <section></section>
