--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <header>
         <div id="fix-head">
             <div id="head-logo">Hvyv<br>nnemo</div>
+            <div id="head-menu">
+                <ul id="head-menu-ul">
+                    <li id="" class="head-menu-ul-li">STUDIO</li>
+                    <li id="" class="head-menu-ul-li">WORK</li>
+                    <li id="" class="head-menu-ul-li">CONTACT</li>
+                </ul>
+            </div>
         </div>
     </header>
     <section></section>
