--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div id="fix-head">
-            <div id="head-logo">Hvyv<br>nnemo</div>
+            <div id="head-logo">HVYV<br>nnemo</div>
             <div id="head-menu">
                 <ul id="head-menu-ul">
                     <li id="" class="head-menu-ul-li">STUDIO</li>
