--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div id="head-logo">HVYV<br>NNEMO</div>
             <div id="head-menu">
                 <ul id="head-menu-ul">
-                    <li id="" class="head-menu-ul-li">STUDIO</li>
+                    <li id="" class="head-menu-ul-li">STORY</li>
                     <li id="" class="head-menu-ul-li">WORK</li>
                     <li id="" class="head-menu-ul-li">CONTACT</li>
                 </ul>
