--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hvyv_nnemo - 하얀네모 스튜디오</title>
     <link rel="stylesheet" href="./css/reset.css">
+    <style>
+        #header {background-color:#f99;}
+    </style>
 </head>
 <body>
     <header>
