--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hvyv_nnemo - 하얀네모 스튜디오</title>
     <link rel="stylesheet" href="./css/reset.css">
     <style>
-        #header {background-color:#f99;}
+        header {background-color:#f99;}
     </style>
 </head>
 <body>
