--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Hvyv_nnemo - 하얀네모 스튜디오</title>
     <link rel="stylesheet" href="./css/reset.css">
     <style>
-        header {background-color:#f99; width: 100%; height: 60px;}
+        header {display: block; position: fixed; background-color:#f99; width: 100%; height: 60px;}
+        #fix-head {width: 100%; height: 100%; }
     </style>
 </head>
 <body>
