--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <style>
         header {display: block; position: fixed; background-color:#f99; width: 100%; height: 60px;}
         #fix-head {width: 100%; height: 100%; }
+        #head-logo {height: 50px; position: absolute; top: 5px; left: 20px;}
     </style>
 </head>
 <body>
