--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <title>Hvyv_nnemo - 하얀네모 스튜디오</title>
     <link rel="stylesheet" href="./css/reset.css">
     <style>
-        header {display: block; position: fixed; background-color:#f99; width: 100%; height: 60px;}
+        header {display: block; position: fixed; background-color:#f99; width: 100%; height: 80px;}
         #fix-head {width: 100%; height: 100%; }
-        #head-logo {font-size: 16px; font-weight: bold; height: 50px; position: absolute; top: 5px; left: 20px;}
+        #head-logo {font-size: 16px; font-weight: bold; height: 60px; position: absolute; top: 5px; left: 20px;}
+        #head-logo span {font-size:20px;}
     </style>
 </head>
 <body>
     <header>
         <div id="fix-head">
-            <div id="head-logo">HVYV<br>NNEMO</div>
+            <div id="head-logo"><span>HVYV<span><br>NNEMO</div>
             <div id="head-menu">
                 <ul id="head-menu-ul">
                     <li id="" class="head-menu-ul-li">STORY</li>
