--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div id="fix-head">
-            <div id="head-logo"><span>HVYV<span><br>NNEMO</div>
+            <div id="head-logo"><span>HVYV</span><br>NNEMO</div>
             <div id="head-menu">
                 <ul id="head-menu-ul">
                     <li id="" class="head-menu-ul-li">STORY</li>
