--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         #fix-head {width: 100%; height: 100%; }
         #head-logo {font-size: 16px; font-weight: bold; height: 60px; position: absolute; top: 10px; left: 20px;}
         #head-logo span {font-size:20px;}
+        #head-menu {position: absolute; right: 20px;}
     </style>
 </head>
 <body>
