--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <style>
         header {display: block; position: fixed; background-color:#f99; width: 100%; height: 80px;}
         #fix-head {width: 100%; height: 100%; }
-        #head-logo {font-size: 14px; font-weight: bold; height: 60px; position: absolute; top: 10px; left: 20px;}
+        #head-logo {font-size: 15px; font-weight: bold; height: 60px; position: absolute; top: 10px; left: 20px;}
         #head-logo span {font-size:20px;}
         #head-menu {position: absolute; right: 20px;}
+        #head-menu-ul {float: left;}
     </style>
 </head>
 <body>
