--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         #head-logo {font-size: 15px; font-weight: bold; height: 60px; position: absolute; top: 10px; left: 20px;}
         #head-logo span {font-size:20px;}
         #head-menu {position: absolute; right: 20px;}
-        #head-menu-ul {float: left;}
+        #head-menu-ul {height: 80px; font-height: 80px;}
+        #head-menu-ul-li {float: left;}
     </style>
 </head>
 <body>
