--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         #head-logo span {font-size:20px;}
         #head-menu {position: absolute; right: 20px;}
         #head-menu-ul {height: 80px; font-height: 80px;}
-        .head-menu-ul-li {float: left;}
+        .head-menu-ul-li {float: left; font-size: 16px; height: 30px; font-height: 30px; margin: 0 30px;}
     </style>
 </head>
 <body>
