--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <style>
         header {display: block; position: fixed; background-color:#f99; width: 100%; height: 80px;}
         #fix-head {width: 100%; height: 100%; }
-        #head-logo {font-size: 15px; font-weight: bold; height: 60px; position: absolute; top: 10px; left: 20px;}
+        #head-logo {font-size: 15px; font-weight: bold; height: 60px; position: absolute; top: 10px; left: 30px;}
         #head-logo span {font-size:20px;}
-        #head-menu {position: absolute; right: 20px;}
-        #head-menu-ul {height: 80px; font-height: 80px;}
+        #head-menu {position: absolute; height: 30px; top: 25px; right: 30px;}
+        #head-menu-ul {}
         .head-menu-ul-li {float: left; font-size: 16px; height: 30px; font-height: 30px; margin: 0 30px;}
     </style>
 </head>
