--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         header {display: block; position: fixed; background-color:#f99; width: 100%; height: 80px;}
         #fix-head {width: 100%; height: 100%; }
-        #head-logo {line-height:60px; font-size: 15px; font-weight: bold; height: 60px; position: absolute; top: 10px; left: 30px;}
+        #head-logo {font-size: 15px; font-weight: bold; height: 60px; position: absolute; top: 10px; left: 30px; padding-top: 3px;}
         #head-logo span {font-size:20px;}
         #head-menu {position: absolute; height: 30px; top: 25px; right: 30px;}
         #head-menu-ul {}
