--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="head-logo"><span>HVYV</span><br>NNEMO</div>
             <div id="head-menu">
                 <ul id="head-menu-ul">
-                    <li id="" class="head-menu-ul-li">STORY</li>
+                    <li id="" class="head-menu-ul-li">ABOUT</li>
                     <li id="" class="head-menu-ul-li">WORK</li>
                     <li id="" class="head-menu-ul-li">CONTACT</li>
                 </ul>
