--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hvyv_nnemo - 하얀네모 스튜디오</title>
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/index_d.css">    
+    <link rel="stylesheet" href="./css/index_v.css">    
+    <link rel="stylesheet" href="./css/index_h.css">    
+    <link rel="stylesheet" href="./css/index_m.css">    
+    
     <style>
         header {display: block; position: fixed; background-color:#f99; width: 100%; height: 80px;}
         #fix-head {width: 100%; height: 100%; }
