--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         #head-logo span {font-size:20px; letter-spacing: 0.9px;}
         #head-menu {position: absolute; height: 30px; top: 25px; right: 30px;}
         #head-menu-ul {}
-        .head-menu-ul-li {float: left; font-size: 16px; height: 30px; line-height: 30px; margin: 0 30px;}
+        .head-menu-ul-li {float: left; font-size: 16px; font-weight:bold; height: 30px; line-height: 30px; margin: 0 30px;}
     </style>
 </head>
 <body>
