--- a/works/publisherw/index.html
+++ b/works/publisherw/index.html
@@ -12,8 +12,33 @@
     <link rel="stylesheet" href="./css/index_m.css">
   </head>
   <body>
-    <header></header>
-    <section></section>
+    <header>
+      <div id="head">
+        <div id="head-logo">
+        PUBLISHER W
+        </div>
+        <div id="head-menu">
+          <div id="menu-about">
+            <a id="menu-about-btn">
+          </div>
+          <div id="menu-markuplan">
+            <a id="menu-markuplan-btn">
+          </div>
+          <div id="menu-study">
+            <a id="menu-study-btn">
+          </div>
+          <div id="contact">
+            <a id="menu-contact-btn">
+          </div>
+        </div>
+      </div>
+    </header>
+    <section>
+      <div id="main-sec"></div>
+      <div id="about-sec"></div>
+      <div id="study-sec"></div>
+      <div id="contact-sec"></div>
+    </section>
     <footer></footer>
   </body>
 </html>
