--- a/works/publisherw/index.html
+++ b/works/publisherw/index.html
@@ -19,16 +19,16 @@
         </div>
         <div id="head-menu">
           <div id="menu-about">
-            <a id="menu-about-btn">
+            <a id="menu-about-btn">WHAT is "WEB"?</a>
           </div>
           <div id="menu-markuplan">
-            <a id="menu-markuplan-btn">
+            <a id="menu-markuplan-btn">Mark-up Language</a>
           </div>
           <div id="menu-study">
-            <a id="menu-study-btn">
+            <a id="menu-study-btn">Study Site</a>
           </div>
           <div id="contact">
-            <a id="menu-contact-btn">
+            <a id="menu-contact-btn">Contact</a>
           </div>
         </div>
       </div>
