--- a/works/publisherw/index.html
+++ b/works/publisherw/index.html
@@ -19,16 +19,22 @@
         </div>
         <div id="head-menu">
           <div id="menu-about">
-            <a id="menu-about-btn">WHAT is "WEB"?</a>
+            <a id="menu-about-btn">WHAT IS "WEB"?</a>
           </div>
-          <div id="menu-markuplan">
-            <a id="menu-markuplan-btn">Mark-up Language</a>
+          <div id="menu-html">
+            <a id="menu-html-btn">HTML</a>
+          </div>
+          <div id="menu-css">
+            <a id="menu-css-btn">CSS</a>
+          </div>
+          <div id="menu-js">
+            <a id="menu-js-btn">JAVASCRIPT</a>
           </div>
           <div id="menu-study">
-            <a id="menu-study-btn">Study Site</a>
+            <a id="menu-study-btn">STUDY FOR MARK-UP</a>
           </div>
-          <div id="contact">
-            <a id="menu-contact-btn">Contact</a>
+          <div id="menu-contact">
+            <a id="menu-contact-btn">CONTACT</a>
           </div>
         </div>
       </div>
