--- a/works/publisherw/index.html
+++ b/works/publisherw/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <div id="head">
+      <div id="head-l">
         <div id="head-logo">
         PUBLISHER W
         </div>
@@ -37,6 +37,9 @@
             <a id="menu-contact-btn">CONTACT</a>
           </div>
         </div>
+      </div>
+      <div id="head-r">
+        <div id="main"></div>
       </div>
     </header>
     <section>
