--- a/works/publisherw/index.html
+++ b/works/publisherw/index.html
@@ -39,7 +39,58 @@
         </div>
       </div>
       <div id="head-r">
-        <div id="main"></div>
+        <div id="main">
+          <div id="main-about">
+            <a id="main-about-btn">
+              <div class="btn-title">
+                WHAT IS 'WEB'?
+              </div>
+              <div class="btn-sub">
+                'WEB'에 대해서 알아볼 수 있습니다.
+              </div>
+            </a>
+          </div>
+          <div id="main-html">
+            <a id="main-html-btn">
+              <div class="btn-title">
+                HTML
+              </div>
+              <div class="btn-sub">
+                Mark-up 언어인 HTML에 대해서 알아볼 수 있습니다.
+              </div>
+            </a>
+          </div>
+          <div id="main-css">
+            <a id="main-css-btn">
+              <div class="btn-title">
+                CSS
+              </div>
+              <div class="btn-sub">
+                페이지의 디자인적 요소인 CSS에 대해서 알아볼 수 있습니다.
+              </div>
+            </a>
+          </div>
+          <div id="main-js">
+            <a id="main-js-btn">
+              <div class="btn-title">
+                JavaScript
+              </div>
+              <div class="btn-sub">
+                페이지를 더욱 풍성하게 해주는 JavaScript에 대해서 알아볼 수 있습니다.
+              </div>
+            </a>
+          </div>
+          <div id="main-study">
+            <a id="main-study-btn">
+              <div class="btn-title">
+                STUDY FOR MARK-UP
+              </div>
+              <div class="btn-sub">
+                웹 프로그래밍에 대한 학습을 할 수 있는 사이트를 소개합니다.
+              </div>
+            </a>
+          </div>
+        </div>
       </div>
     </header>
     <section>
