--- a/works/publisherw/index.html
+++ b/works/publisherw/index.html
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div id="head-r">
-        <div id="main">
+        <div id="main-menu">
           <div id="main-about">
             <a id="main-about-btn">
               <div class="btn-title">
