--- a/works/publisherw/index.html
+++ b/works/publisherw/index.html
@@ -43,7 +43,7 @@
           <div id="main-about">
             <a id="main-about-btn">
               <div class="btn-title">
-                WHAT IS 'WEB'?
+                <span></span>WHAT IS 'WEB'?
               </div>
               <div class="btn-sub">
                 'WEB'에 대해서 알아볼 수 있습니다.
@@ -53,7 +53,7 @@
           <div id="main-html">
             <a id="main-html-btn">
               <div class="btn-title">
-                HTML
+                <span></span>HTML
               </div>
               <div class="btn-sub">
                 Mark-up 언어인 HTML에 대해서 알아볼 수 있습니다.
@@ -63,7 +63,7 @@
           <div id="main-css">
             <a id="main-css-btn">
               <div class="btn-title">
-                CSS
+                <span></span>CSS
               </div>
               <div class="btn-sub">
                 페이지의 디자인적 요소인 CSS에 대해서 알아볼 수 있습니다.
@@ -73,7 +73,7 @@
           <div id="main-js">
             <a id="main-js-btn">
               <div class="btn-title">
-                JavaScript
+                <span></span>JavaScript
               </div>
               <div class="btn-sub">
                 페이지를 더욱 풍성하게 해주는 JavaScript에 대해서 알아볼 수 있습니다.
@@ -83,7 +83,7 @@
           <div id="main-study">
             <a id="main-study-btn">
               <div class="btn-title">
-                STUDY FOR MARK-UP
+                <span></span>STUDY FOR MARK-UP
               </div>
               <div class="btn-sub">
                 웹 프로그래밍에 대한 학습을 할 수 있는 사이트를 소개합니다.
