--- a/works/publisherw/index.html
+++ b/works/publisherw/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./css/index_v.css">    
     <link rel="stylesheet" href="./css/index_h.css">    
     <link rel="stylesheet" href="./css/index_m.css">
+    
+    <script type="text/javascript" src="./js/libs/jquery.js"></script>
   </head>
   <body>
     <header>
