--- a/works/publisherw/index.html
+++ b/works/publisherw/index.html
@@ -43,7 +43,7 @@
       <div id="head-r">
         <div id="main-menu">
           <div id="main-about">
-            <a id="main-about-btn">
+            <a id="main-about-btn" class="main-btn">
               <div class="btn-title">
                 <span class="btn-img"></span><span class="btn-title">WHAT IS 'WEB'?</span>
               </div>
@@ -53,7 +53,7 @@
             </a>
           </div>
           <div id="main-html">
-            <a id="main-html-btn">
+            <a id="main-html-btn" class="main-btn">
               <div class="btn-title">
                 <span class="btn-img"></span><span class="btn-title">HTML</span>
               </div>
@@ -63,7 +63,7 @@
             </a>
           </div>
           <div id="main-css">
-            <a id="main-css-btn">
+            <a id="main-css-btn" class="main-btn">
               <div class="btn-title">
                 <span class="btn-img"></span><span class="btn-title">CSS</span>
               </div>
@@ -73,7 +73,7 @@
             </a>
           </div>
           <div id="main-js">
-            <a id="main-js-btn">
+            <a id="main-js-btn" class="main-btn">
               <div class="btn-title">
                 <span class="btn-img"></span><span class="btn-title">JavaScript</span>
               </div>
@@ -83,7 +83,7 @@
             </a>
           </div>
           <div id="main-study">
-            <a id="main-study-btn">
+            <a id="main-study-btn" class="main-btn">
               <div class="btn-title">
                 <span class="btn-img"></span><span class="btn-title">STUDY FOR MARK-UP</span>
               </div>
