--- a/works/publisherw/index.html
+++ b/works/publisherw/index.html
@@ -50,6 +50,7 @@
               <div class="btn-sub">
                 'WEB'에 대해서 알아볼 수 있습니다.
               </div>
+              <div class="black-bg"></div>
             </a>
           </div>
           <div id="main-html">
@@ -60,6 +61,7 @@
               <div class="btn-sub">
                 Mark-up 언어인 HTML에 대해서 알아볼 수 있습니다.
               </div>
+              <div class="black-bg"></div>
             </a>
           </div>
           <div id="main-css">
@@ -70,6 +72,7 @@
               <div class="btn-sub">
                 페이지의 디자인적 요소인 CSS에 대해서 알아볼 수 있습니다.
               </div>
+              <div class="black-bg"></div>
             </a>
           </div>
           <div id="main-js">
@@ -80,6 +83,7 @@
               <div class="btn-sub">
                 페이지를 더욱 풍성하게 해주는 JavaScript에 대해서 알아볼 수 있습니다.
               </div>
+              <div class="black-bg"></div>
             </a>
           </div>
           <div id="main-study">
@@ -90,6 +94,7 @@
               <div class="btn-sub">
                 웹 프로그래밍에 대한 학습을 할 수 있는 사이트를 소개합니다.
               </div>
+              <div class="black-bg"></div>
             </a>
           </div>
         </div>
