--- a/works/publisherw/index.html
+++ b/works/publisherw/index.html
@@ -46,7 +46,7 @@
             <a id="main-about-btn" class="main-btn">
               <div class="black-bg"></div>
               <div class="btn-title">
-                <span class="btn-img"></span><span class="btn-title">WHAT IS 'WEB'?</span>
+                <span class="btn-img-span"></span><span class="btn-title-span">WHAT IS 'WEB'?</span>
               </div>
               <div class="btn-sub">
                 'WEB'에 대해서 알아볼 수 있습니다.
@@ -57,7 +57,7 @@
             <a id="main-html-btn" class="main-btn">
               <div class="black-bg"></div>
               <div class="btn-title">
-                <span class="btn-img"></span><span class="btn-title">HTML</span>
+                <span class="btn-img-span"></span><span class="btn-title-span">HTML</span>
               </div>
               <div class="btn-sub">
                 Mark-up 언어인 HTML에 대해서 알아볼 수 있습니다.
@@ -68,7 +68,7 @@
             <a id="main-css-btn" class="main-btn">
               <div class="black-bg"></div>
               <div class="btn-title">
-                <span class="btn-img"></span><span class="btn-title">CSS</span>
+                <span class="btn-img-span"></span><span class="btn-title-span">CSS</span>
               </div>
               <div class="btn-sub">
                 페이지의 디자인적 요소인 CSS에 대해서 알아볼 수 있습니다.
@@ -79,7 +79,7 @@
             <a id="main-js-btn" class="main-btn">
               <div class="black-bg"></div>
               <div class="btn-title">
-                <span class="btn-img"></span><span class="btn-title">JavaScript</span>
+                <span class="btn-img-span"></span><span class="btn-title-span">JavaScript</span>
               </div>
               <div class="btn-sub">
                 페이지를 더욱 풍성하게 해주는 JavaScript에 대해서 알아볼 수 있습니다.
@@ -90,7 +90,7 @@
             <a id="main-study-btn" class="main-btn">
               <div class="black-bg"></div>
               <div class="btn-title">
-                <span class="btn-img"></span><span class="btn-title">STUDY FOR MARK-UP</span>
+                <span class="btn-img-span"></span><span class="btn-title-span">STUDY FOR MARK-UP</span>
               </div>
               <div class="btn-sub">
                 웹 프로그래밍에 대한 학습을 할 수 있는 사이트를 소개합니다.
