--- a/works/publisherw/index.html
+++ b/works/publisherw/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/index_m.css">
     
     <script type="text/javascript" src="./js/libs/jquery.js"></script>
+    <script type="text/javascript" src="./js/index.js"></script>
   </head>
   <body>
     <header>
