--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -81,10 +80,19 @@
                     <div class="detail_list">
                         <img src="img/6_bottom.png" class="detail_list_img">
                         <a class="detail_hide_btn"></a>
-                        <a href="pay.html" class="gotopay_btn">교통카드 결제</a>
+                        <a class="gotopay_btn">교통카드 결제</a>
                     </div>
                     <div class="detail_footer">
                         <img src="img/6_footer.png" class="detail_footer_img">
+                    </div>
+                </div>
+
+                <div class="paypopup_base">
+                    <div class="blackout"></div>
+                    <div class="paypopup">
+                        <img src="img/paypopup.png" class="paypopup_img">
+                        <a href="pay.html" class="realgotopay"></a>
+                        <a class="gotodetail"></a>
                     </div>
                 </div>
 
