--- a/test.html
+++ b/test.html
@@ -29,9 +29,8 @@
   <div id="desktopNotice">
     <!-- <p>본 페이지는 모바일 환경으로 최대한 맞추어 제작되었습니다.<br>
     데스크탑 웹의 경우, 페이지 넓이를 줄여 모바일과 비슷한 환경으로 만들어주세요!</p> -->
-    <embed width="100%" height="100%" src="https://xd.adobe.com/view/a8c6413a-646a-4d7c-a451-9f75ed5d8d70-fd95/?fullscreen&hints=off">
-      
-    </embed>
+    <iframe width="100%" height="100%" src="https://xd.adobe.com/embed/66b7ae69-79d9-474b-bb9d-e566a53d4f40-33e4/" frameborder="0" allowfullscreen></iframe>
+
   </div>
     <!-- HEADER START -->
     <!-- <div id="header">
