--- a/test.html
+++ b/test.html
@@ -12,10 +12,11 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/font.css">
     <!-- <link rel="stylesheet" href="./css/layout.css"> -->
-    <link rel="stylesheet" href="./css/index_d.css">    
+    <!--<link rel="stylesheet" href="./css/index_d.css">    
     <link rel="stylesheet" href="./css/index_v.css">    
     <link rel="stylesheet" href="./css/index_h.css">    
-    <link rel="stylesheet" href="./css/index_m.css">    
+    <link rel="stylesheet" href="./css/index_m.css">-->    
+    <link rel="stylesheet" href="./css/test.css">
     <!-- Jquery -->
     <!--<script type="text/javascript" src="./js/libs/jquery.min.js"></script>
     <script type="text/javascript" src="./js/libs/jquery-ui.min.js"></script>
