--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/index_v.css">    
     <link rel="stylesheet" href="./css/index_h.css">    
     <link rel="stylesheet" href="./css/index_m.css">-->    
-    <link rel="stylesheet" href="./css/test.css">
+    <link rel="stylesheet" href="test.css">
     <!-- Jquery -->
     <!--<script type="text/javascript" src="./js/libs/jquery.min.js"></script>
     <script type="text/javascript" src="./js/libs/jquery-ui.min.js"></script>
