--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/font.css">
-    <link rel="stylesheet" href="./css/index_d.css">    
-    <!-- <link rel="stylesheet" href="./css/index_v.css">    
-    <link rel="stylesheet" href="./css/index_h.css">     -->    
+    <link rel="stylesheet" href="./css/index_d.css">
+    <!-- <link rel="stylesheet" href="./css/index_v.css">
+    <link rel="stylesheet" href="./css/index_h.css">     -->
     <link rel="stylesheet" href="./css/index_m.css">
     <!-- Jquery -->
     <script type="text/javascript" src="./js/libs/jquery.min.js"></script>
@@ -24,10 +24,10 @@
 
     <!-- HEADER START -->
     <div class="header">
-        
+
     </div>
     <!-- HEADER END -->
-    
+
     <!-- CONTENT START -->
     <div class="content">
         <div class="scr-main">
@@ -51,10 +51,10 @@
                 </div>
             </div>
             <div class="scr2">
-                <iframe src="https://xd.adobe.com/embed/37b5fde0-87b7-44e1-a5c2-7785adcdc5ec-62e6/?fullscreen&hints=off" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://xd.adobe.com/embed/37b5fde0-87b7-44e1-a5c2-7785adcdc5ec-62e6/?fullscreen&hints=on" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="scr3">
-                <iframe src="https://xd.adobe.com/embed/21f74987-5a64-447a-9360-050201363889-74a4/?fullscreen&hints=off" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://xd.adobe.com/embed/21f74987-5a64-447a-9360-050201363889-74a4/?fullscreen&hints=on" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
@@ -72,7 +72,7 @@
     <!-- FOOTER END -->
 
     <!-- SCRIPT START -->
-    <!-- 
+    <!--
     <script type="text/javascript" src="./js/aboutSlider.js"></script>
     <script type="text/javascript" src="./js/noteSlider.js"></script>
     -->
